--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2001-09-25  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/process.cpp: Added flag for repeatable regression tests.
+
+	* src/ClientConnection.cpp, src/ClientConnection.h: Implemented
+	  timeout when waiting for operations to arrive.
+
 2001-09-24  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/pythonInterface.h, src/pythonInterface.cpp: Made python
