--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2001-09-25  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
+	* src/ClientConnection.cpp: Fixed login and create to send atlas
+	  compliant acount objects with objtype and parents.
+
+2001-09-25  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
 	* src/process.cpp: Added flag for repeatable regression tests.
 
 	* src/ClientConnection.cpp, src/ClientConnection.h: Implemented
