--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,14 @@
-2001-09-25  Al Riddoch  <ajr@ecs.soton.ac.uk>
+2001-10-10  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/ClientConnection.h: Added check if connection is open, so
+	  tests can continue even if not all connections worked.
+
+	* src/ClientConnection.cpp: Implemented non-fatal warning if
+	  numerical attributes are of the wrong numberical type.
+
+	* src/process.cpp: Added tests for lobby chat.
+
+2001-10-08  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/ClientConnection.cpp: Fixed login and create to send atlas
 	  compliant acount objects with objtype and parents.
