--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2001-10-10  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
+	* src/ClientConnection.cpp: Adapted waitFor so it is tolerant
+	  of unexpected ops.
+
+2001-10-10  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
 	* src/ClientConnection.h: Added check if connection is open, so
 	  tests can continue even if not all connections worked.
 
