--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,14 @@
+2001-10-15  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/process.cpp: Added TO to all OOG chat related ops, and
+	  added a test which generates a warning on servers which don't
+	  work without TO.
+
 2001-10-10  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/process.cpp: Modified tests so the "loc" attribute is used
 	  in OOG ops. Added tests to ensure that appearance and disappearance
-	  ops are created by loggin in and out.
+	  ops are created by logging in and out.
 
 2001-10-10  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
