--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wednesday, December 19 2001, James Turner
+
+	* Three simple tests of type-queries. Attempts to
+	  retrieve the root object, the definition for 'game_entity',
+	  and one invalid type ('__bad__type__').
+
 2001-11-08  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/process.cpp: Tidied up formatting of private chat tests,
