--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-14  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
+	* src/process.cpp: Switch type queries to use map arguments as they
+	  should rather than string arguments.
+
+2002-01-14  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
 	* C++ compliance fixes for gcc 3.
 
 Wednesday, December 19 2001, James Turner
