--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Saturday, January 26 2002, James Turner <jmtn@blueyonder.co.uk>
+
+	* configure.in checks for skstream2 using the AM_PATH_SKSTREAM
+	  macro
+	* Updated ClientConnection.cpp to use skstream2, and also to
+	  take full advanatge of the skstream setup code to handle
+	  all the socket stuff
+	* Remove client_fd from ClientConnection, and change all
+	  access to use getSocket() on the socket_stream.
+
 2002-01-14  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/process.cpp: Switch type queries to use map arguments as they
