--- a/TODO
+++ b/TODO
@@ -1,6 +1,23 @@
 Add tests for appearance and disappearance ops in lobby
 
-Modify waitFor so it is tolerant of operation order, and does not discard ops.
-
 Add TO attr to Talk ops. Add test to ensure everything still works if TO
 is not set. Add test to see whether server detect misset TO.
+
+Out-of-Game
+
+Test invalid password 
+Test duplicate login
+
+[ multi-room stuff ]
+	Room creation
+	Room join
+	Room leave
+
+	Chat in multiple (created rooms)
+
+Character look to unknown character
+
+In-Game
+
+Move self
+Chat
