2002-07-10  Al Riddoch  <ajr@ecs.soton.ac.uk>
	* configure.in: Rationalise python checks.

	* src/ClientConnection.cpp: Switch to username based login.

	* src/ClientConnection.h: Fix bug referencing a temporary.

	* src/atlasUtils.h, src/process.cpp, src/testOOG.cpp,
	  src/testOOG.h, src/validator.cpp, src/validator.h:
	  Make sure all the files have newlines on the end.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+Make the waitFor code all use serial/ref no.s properlly.
+
 Add tests for appearance and disappearance ops in lobby
 
 Add TO attr to Talk ops. Add test to ensure everything still works if TO
