--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2002-07-10  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* configure.in: Rationalise python checks.
+
+	* src/ClientConnection.cpp: Switch to username based login.
+
+	* src/ClientConnection.h: Fix bug referencing a temporary.
+
+	* src/atlasUtils.h, src/process.cpp, src/testOOG.cpp,
+	  src/testOOG.h, src/validator.cpp, src/validator.h:
+	  Make sure all the files have newlines on the end.
+
 2002-06-26  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/ClientConnection.h, src/ClientConnection.cpp:
