--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-14  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/ClientConnection.cpp, src/process.cpp, src/pythonInterface.cpp,
+	  src/testOOG.cpp: ISO C++ compliance fixes.
+
 2002-07-10  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* configure.in: Rationalise python checks.
