--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-14  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/gobshite.cpp: Added a new test client, that talks and talks,
+	  but just won't listen.
+
 2002-07-15  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/ClientConnection.cpp, src/process.cpp, src/testOOG.cpp,
