--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-08-14  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
+	* src/gobshite.cpp: Fix for ISO C++.
+
+2002-08-14  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
 	* src/gobshite.cpp: Added a new test client, that talks and talks,
 	  but just won't listen.
 
