--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-11-04  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/ClientConnection.cpp, src/ClientConnection.h, src/process.cpp:
+	  Re-structure core test code so it is more resiliant to things
+	  that don't matter, and has the capability to check for refno.
+
 2002-08-14  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/gobshite.cpp: Fix for ISO C++.
