--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-11-04  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
+	* src/process.cpp: Change test character type to settler, as some
+	  servers will not create a farmer.
+
+2002-11-04  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
 	* configure.in: Clean up configure script.
 
 	* src/pythonInterface.cpp: Re-organise headers, and use ISO C++
