--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-01-02  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/ClientConnection.cpp, src/ClientConnection.h:
+	  Store and make available the account id logged in on the current
+	  connection.
+
+	* src/process.cpp: Use account id rather than username when setting
+	  FROM and TO on ops.
+
 2002-12-01  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/process.cpp: Change test character type to settler, as some
