--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-2002-01-02  Al Riddoch  <ajr@ecs.soton.ac.uk>
+2003-01-02  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Convert to pkgconfig.
+
+2003-01-02  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/ClientConnection.cpp, src/ClientConnection.h:
 	  Store and make available the account id logged in on the current
