--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-23 James Turner <james@worldforge.org>
+
+    * Changed how the python lib check works, to avoid autoconf
+	  caching issues.
+
 2003-04-22  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* configure.in: Adapt python check so it works on BSD systems
