--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-06-27  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/ClientConnection.cpp: Clean up some of the output messages, so
+	  they are easier to understand.
+
+	* src/gobshite.cpp: Handle usage errors better.
+
+	* src/process.cpp: Clarify an output message.
+
 2003-06-23  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Clean up Makefile.am so dist and distcheck work.
