--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-08  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Port whole codebase to Atlas-C++ 0.6 API.
+
 2003-06-27  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/ClientConnection.cpp: Clean up some of the output messages, so
