--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-21  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* configure.in: Clean up help for python prefix option, add check
+	  for python 2.3 and use latest pthread check.
+
 2003-08-08  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Port whole codebase to Atlas-C++ 0.6 API.
