--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-08-22  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
+	* src/gobshite.cpp: Add code to load atlas.xml before running, as
+	  is required.
+
+2003-08-22  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
 	* src/process.cpp: Add some help documenting options.
 	  Add new options to allow running standalone scripted
 	  tests, or scripted tests that extend the current set.
