--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2003-10-29  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/ClientConnection.h: Remove old code, clean up some comments,
+	  get rid of redundant includes and update copyright date.
+
+	* src/atlasUtils.cpp, src/atlasUtils.h, src/pythonInterface.h,
+	  src/testOOG.h, src/validator.h: Add copyright header, and
+	  clean up includes.
+
+	* src/gobshite.cpp, src/process.cpp: Implement cleaner code
+	  for loading atlas.xml, which tries in a couple of sensible
+	  places, and reports an error if it fails.
+
 2003-10-28  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/ClientConnection.cpp: Eliminate duplicating of Info ops,
