--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2003-10-29  James Turner  <james@worldforge.org>
+
+        * Add ProjectBuilder project, requires uncommitted Atlas-C++ 0.6
+          framework, skstream 0.3 framework from CVS, and python22 from
+          Fink.
+        * Add a createChar method to ClientConnection, and change the
+          character tests to use it. As part of this, add a new tag
+          value to Connection, 'character', containing the entity ID,
+          and a new accessor.
+        * Add an in-game LOOK test; currently this just tests an
+          anonymous look, but i'll be extending it to do a self look and
+          a few other things shortly.
+
 2003-10-29  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/ClientConnection.h: Remove old code, clean up some comments,
