--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2003-10-30  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/testOOG.h, src/testOOG.cpp: Re-purpose files to contain
+	  OOG Look and Talk test code copied from main().
+
+	* tests.cpp, tests.h, src/testIG.h, src/testIG.cpp: Move IG
+	  tests from tests.cpp to their own file.
+
+	* src/process.cpp: Remove OOG Look and Talk tests, and use the
+	  function version.
+
 2003-10-29  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/tests.h src/tests.cpp, src/process.cpp: Move test functions
