--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-30  James Turner <james@worldforge.org>
+	* Add new files to the ProjectBuilder file
+	* Remove no-longer-useful validator and
+	  atlasUtils files.
+
 2003-10-30  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/process.cpp, src/tests.cpp, src/tests.h, src/testCharacter.cpp,
