--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,18 @@
+2003-11-04  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/testIG.cpp: Re-arrange and clean up code a bit, and merge
+	  changes from James Turner to do some more thorough checking.
+
+	* src/testIG.cpp: Fix look tests so that arguments of look
+	  ops contain entity with ID, not just the ID itself, and
+	  fix the expected LOC to be the ID of the parent, not the
+	  parent's LOC.
+
 2003-11-03 James Turner <james@worldforge.org>
 
-        * Add more IG look tests - at the character, i.e a self look,
-          and at two random children of the world and character. Also
-          validate the LOC attribute of the recived entities.
+	* Add more IG look tests - at the character, i.e a self look,
+	  and at two random children of the world and character. Also
+	  validate the LOC attribute of the recived entities.
 
 2003-10-30  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
