--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-06  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/tests.cpp: Remove unused code.
+
 2003-12-02  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Clean up autogen.sh a little more. Add canonical macros.
