--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-02-27  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/ClientConnection.cpp, src/ClientConnection.h,
+	  src/process.cpp, src/pythonInterface.cpp, src/pythonInterface.h,
+	  src/testCharacter.cpp, src/testIG.cpp, src/testLogin.cpp,
+	  src/testOOG.cpp, src/tests.cpp: Update to use the latest
+	  Atlas-C++ API, using the new flag to enforce use of the new
+	  typedefs.
+
 2003-12-06  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/tests.cpp: Remove unused code.
