--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-26  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/testCharacter.cpp: Add test for character customisation.
+
 2004-02-27  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Remove cppunit configure test.
