--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-28  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/process.cpp: Don't load Atlas spec from file.
+
 2004-05-26  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/testCharacter.cpp: Add test for character customisation.
