--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-20  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/process.cpp, src/pythonInterface.h: Clean up include order.
+
 2004-08-09  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/ClientConnection.cpp: Use correct client name. Pass a decoder
