--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-11-20  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
+	* configure.in: Update python check to catch latest version.
+
+	* acinclude.m4: Clean out obsolete out of data macros.
+
+2004-11-20  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
 	* src/process.cpp, src/pythonInterface.h: Clean up include order.
 
 2004-08-09  Al Riddoch  <ajr@ecs.soton.ac.uk>
