--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-06  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* loadtool/User.cpp: Flush output to ensure it gets seen at the right
+	  time.
+
 2005-04-06  James Turner  <james@worldforge.org>
 
 	* loadtool/User.cpp: update for new Eris CVS Connection API
