--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
-2006-04-06  Al Riddoch  <ajr@ecs.soton.ac.uk>
+2005-04-17  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/ClientConnection.cpp: Be slightly less pedantic about the format
+	  of error operations.
+
+	* configure.ac: Switch to configure.ac with more updated autoconf
+	  usage.
+
+2005-04-06  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* loadtool/User.cpp: Flush output to ensure it gets seen at the right
 	  time.
