--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-04-18  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/ClientConnection.cpp: Add some code that is convenient when
+	  debugging.
+
+	* src/tests.cpp: Check for objtype on type info requests, but
+	  don't expect the root type to have a parents attribute.
+
 2005-04-17  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/ClientConnection.cpp: Be slightly less pedantic about the format
