--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-02  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* perf/minserver.cpp, perf/rawclient.cpp, src/ClientConnection.cpp:
+	  Update to use new Negotiate API in Atlas-C++.
+
 2005-09-06  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/ClientConnection.cpp: Fix getAttr() to copyAttr(), as it was
