--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2006-01-10  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/gobshite.cpp, src/process.cpp: Remove Atlas spec loading,
+	  as its not required.
+
+	* src/bint.cpp: Add a new test for clients which disconnect without
+	  reading.
+
+	* src/testCharacter.cpp: Add some more character creation tests.
+
 2005-12-31  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* loadtool/Character.h: Fix C++ includes now that they are no longer
