--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2006-07-19  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* src/ClientConnection.cpp: Add stiffer checks for reply to
+	  character creation.
+
+	* src/testCharacter.h, src/testCharacter.cpp: Add new function to
+	  test turning items in the inventory into a stack.
+
+	* src/process.cpp: Call the inventory test on the first character.
+
 2006-01-10  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* src/gobshite.cpp, src/process.cpp: Remove Atlas spec loading,
