--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-2006-12-03  Al Riddoch  <ajr@ecs.soton.ac.uk3
+2007-11-02  Al Riddoch  <alriddoch@googlemail.com>
+
+	* configure.ac: Update the python tests to work with recent versions.
+
+2006-12-03  Al Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* perf/minserver.cpp: Add skstream include required due to changes
 	  in skstream header dependencies.
