--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-10  Al Riddoch  <alriddoch@googlemail.com>
+
+	* perf/rawclient.cpp: Increase the number of operations used
+	  so the time period is long enough.
+
 2007-11-05  Al Riddoch  <alriddoch@googlemail.com>
 
 	* acinclude.m4, configure.ac: Update to latest pkgconfig macros.
