--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-09-15  Al Riddoch  <alriddoch@googlemail.com>
 
+	* perf/rawclient.cpp: Add C header includes required by more
+	  recent compilers.
+
+2008-09-15  Al Riddoch  <alriddoch@googlemail.com>
+
 	* src/testIG.cpp, src/testLogin.cpp: Add C header includes
 	  required by more recent compilers.
 
