--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-11-07  Al Riddoch  <alriddoch@googlemail.com>
 
+	* src/Makefile.am: Make sure the necessary include paths are
+	  available.
+
+2008-11-07  Al Riddoch  <alriddoch@googlemail.com>
+
 	* configure.ac: Add a check to see if we should disable strict
 	  aliasing, as python seems to break it.
 
